--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,13 @@ dependencies {
 
   compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.5.0'
   compile group: 'org.lionsoul', name: 'ip2region', version: '1.4'
+  compile group: 'com.jsoniter', name: 'jsoniter', version: '0.9.15'
+
+  compile group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.10.1'
+  compile group: 'com.hankcs', name: 'hanlp', version: 'portable-1.5.2'
+
+  compile group: 'org.elasticsearch', name: 'elasticsearch', version: '6.0.1'
+  compile group: 'org.elasticsearch.client', name: 'transport', version: '6.0.1'
 
   compile group: 'junit', name: 'junit', version: '4.12'
 }
