--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,7 @@ dependencies {
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-logging', version: '1.5.8.RELEASE'
   compile group: 'org.mapdb', name: 'mapdb', version: '3.0.5'
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
-  compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.1.2'
+  compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.8'
 
   compile group: 'org.mongodb', name: 'mongo-java-driver', version: '3.5.0'
   compile group: 'org.lionsoul', name: 'ip2region', version: '1.4'
@@ -50,6 +50,13 @@ dependencies {
 
   compile 'com.cmb.life:cmblife-open-sdk:2.0'
   compile 'cn.hutool:hutool-crypto:4.1.19'
+
+  compile 'com.squareup.retrofit2:retrofit:2.5.0'
+  compile 'com.squareup.retrofit2:converter-gson:2.5.0'
+  compile 'com.squareup.okhttp3:okhttp:3.14.1'
+  compile 'org.ligboy.retrofit2:converter-fastjson:2.1.0'
+  
+  compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
 
   compile group: 'junit', name: 'junit', version: '4.12'
 }
