--- a/build.gradle
+++ b/build.gradle
@@ -58,5 +58,7 @@ dependencies {
   
   compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.11.2'
 
+  compile group: 'redis.clients', name: 'jedis', version: '3.0.1'
+
   compile group: 'junit', name: 'junit', version: '4.12'
 }
