--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,9 @@ repositories {
   maven {
     url 'http://maven.aliyun.com/nexus/content/groups/public/'
   }
+  maven {
+    url 'http://maven.icm.edu.pl/artifactory/repo/'
+  }
   mavenCentral()
   jcenter()
 }
@@ -59,6 +62,7 @@ dependencies {
 
   compile group: 'redis.clients', name: 'jedis', version: '3.0.1'
   compile group: 'com.xk72', name: 'pherialize', version: '1.2.4'
+  compile group: 'ws.schild', name: 'jave-all-deps', version: '2.7.1'
 
   compile group: 'junit', name: 'junit', version: '4.12'
 }
