--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,6 @@ dependencies {
   compile group: 'redis.clients', name: 'jedis', version: '3.0.1'
   compile group: 'com.xk72', name: 'pherialize', version: '1.2.4'
   compile group: 'ws.schild', name: 'jave-all-deps', version: '2.7.1'
-
+  compile group: 'com.alibaba', name: 'fastjson', version: '1.2.67'
   compile group: 'junit', name: 'junit', version: '4.12'
 }
