--- a/build.gradle
+++ b/build.gradle
@@ -65,4 +65,5 @@ dependencies {
   compile group: 'ws.schild', name: 'jave-all-deps', version: '2.7.1'
   compile group: 'com.alibaba', name: 'fastjson', version: '1.2.67'
   compile group: 'junit', name: 'junit', version: '4.12'
+  compile group: 'com.maoyan', name: 'maoyan-base-common-utils', version: '1.0.1'
 }
