--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,7 @@ repositories {
     url 'http://maven.aliyun.com/nexus/content/groups/public/'
   }
   maven {
-    url 'http://maven.icm.edu.pl/artifactory/repo/'
+    url 'http://pixel.sankuai.com/repository/group-releases'
   }
   mavenCentral()
   jcenter()
@@ -21,6 +21,7 @@ dependencies {
   compile group: 'com.google.guava', name: 'guava', version: '23.0'
   compile group: 'org.projectlombok', name: 'lombok', version: '1.16.14'
   compile group: 'org.springframework.boot', name: 'spring-boot-starter-logging', version: '1.5.8.RELEASE'
+  compile group: 'org.springframework.boot', name: 'spring-boot-starter-data-redis', version: '1.5.8.RELEASE'
   compile group: 'org.mapdb', name: 'mapdb', version: '3.0.5'
   compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.2'
   compile group: 'io.reactivex.rxjava2', name: 'rxjava', version: '2.2.8'
@@ -65,5 +66,7 @@ dependencies {
   compile group: 'ws.schild', name: 'jave-all-deps', version: '2.7.1'
   compile group: 'com.alibaba', name: 'fastjson', version: '1.2.67'
   compile group: 'junit', name: 'junit', version: '4.12'
-  compile group: 'com.maoyan', name: 'maoyan-base-common-utils', version: '1.0.1'
+  compile group: 'com.maoyan', name: 'maoyan-base-common-utils', version: '1.0.2'
+  compile group: 'com.alibaba', name: 'transmittable-thread-local', version: '2.11.5'
+  compile group: 'com.alibaba', name: 'easyexcel', version: '2.2.6'
 }
